k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: video-ingest-ns
  labels:
    name: video-ingest-ns
