k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-ingest-app
  namespace: video-ingest-ns
  labels:
    app: video-ingest
spec:
  replicas: 1 # Default, será sobrescrito pelo HPA ou Overlay
  selector:
    matchLabels:
      app: video-ingest
  template:
    metadata:
      labels:
        app: video-ingest
    spec:
      containers:
        - name: video-ingest
          # A imagem será definida pelo kustomize edit set image no CI/CD
          image: video-ingest-image:latest 
          imagePullPolicy: Always
          ports:
            - containerPort: 8000 # Porta definida no seu Dockerfile
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
