k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: video-ingest-svc
spec:
  type: LoadBalancer
  selector:
    app: video-ingest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
